# SO-ARM-MoveIt-Config

./: .gitignore  README.md
src/so_arm_description/: CMakeLists.txt  package.xml
src/so_arm_description/config/: joint_names_so_arm_urdf.yaml
src/so_arm_description/urdf/: so101_new_calib.urdf
src/so_arm_moveit_config/: .setup_assistant  package.xml
src/so_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  so101_new_calib.ros2_control.xacro  so101_new_calib.srdf
